# termometro-da-polarizacao

./: .gitignore  LICENSE  README.md  docker-compose.yml  package-lock.json  package.json  test.py
.github/workflows/: deploy.yml
libs/termopol_db/: pyproject.toml
libs/termopol_db/src/termopol_db/: __init__.py  config.py  connection.py
libs/termopol_db/src/termopol_db/queries/: __init__.py  graph.py  ingestion_log.py  normalized.py  raw.py
libs/termopol_db/src/termopol_db/repositories/: __init__.py  base.py  graph.py  ingestion_log.py  normalized.py  raw.py
ops/nginx/: nginx.conf
ops/postgres/: init.sql  run-migrations.sh
ops/postgres/migrations/: 2026-03-17_add_nodes.sql  2026-03-18_add_graph_dirty_to_votings.sql  2026-03-19_tune_edges_storage.sql  2026-03-20_enforce_graph_uniqueness.sql  2026-03-21_add_nodes_pagerank.sql
services/api/: Dockerfile  requirements.txt
services/api/src/api/: cache.py  dependencies.py  main.py
services/api/src/api/routers/: deputies.py  graphs.py  health.py  metrics.py  rankings.py
services/api/src/api/services/: __init__.py  deputies_service.py  graphs_service.py  health_service.py  metrics_service.py  rankings_service.py
services/pipeline/: Dockerfile  pyproject.toml  requirements.txt  run.py
services/pipeline/src/pipeline/: scheduler.py
services/pipeline/src/pipeline/client/: camara_client.py
services/pipeline/src/pipeline/config/: __init__.py  config.yaml  loader.py
services/pipeline/src/pipeline/graph/: build.py
services/pipeline/src/pipeline/ingest/: __init__.py  base.py  deputies.py  parties.py  votings.py
services/pipeline/src/pipeline/metrics/: __init__.py  backbone.py  layout.py  pagerank.py  polarization.py
services/pipeline/src/pipeline/transform/: deputies.py  parties.py  rollcalls.py  votings.py
services/web/: Dockerfile  next.config.ts  package.json  tailwind.config.ts
services/web/src/app/: globals.css  icon.tsx  layout.tsx  page.tsx  providers.tsx
services/web/src/app/dashboard/: page.tsx
services/web/src/hooks/: useAvailableGraphs.ts  useDeputy.ts  useGraph.ts  useMetrics.ts  useRankings.ts  useSubgraph.ts  useTimeseries.ts
services/web/src/lib/: api.ts  utils.ts
services/web/src/types/: api.ts
(+23 files in other folders)
