[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "termopol-pipeline"
version = "0.1.0"
description = "Data pipeline for fetching and processing Câmara Legislativa data"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Frederico Baker", email = "fredericodsbaker@gmail.com"}
]

dependencies = [
    "requests>=2.31.0",
    "psycopg2-binary>=2.9.9",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "networkx>=3.0",
    "numpy",
    "scipy",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "mypy>=1.5.0",
    "ruff>=0.1.0",
]

[tool.setuptools]
packages = ["pipeline"]
package-dir = {"" = "src"}

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "--cov=pipeline --cov-report=term-missing"
